Revert "Internal: Fix collapsed sidebar menu overflow - refs #7576"
This reverts commit aa899e4ac773e4082e6c796bc3512c177f17f665.

--- a/assets/css/scss/organisms/_sidebar.scss
+++ b/assets/css/scss/organisms/_sidebar.scss
@@ -192,21 +192,6 @@
       @apply hidden
         sm:block sm:w-[88px];
 
-      overflow: visible;
-
-      &__container {
-        @apply sm:overflow-x-hidden;
-      }
-
-      &__panel {
-        @apply sm:overflow-x-hidden;
-      }
-
-      .p-panelmenu-content,
-      .p-panelmenu-submenu {
-        @apply sm:hidden;
-      }
-
       .p-panelmenu-header {
         > .p-panelmenu-header-content a {
           .p-submenu-icon {
